--- a/bonus.html
+++ b/bonus.html
@@ -11,6 +11,13 @@
 <body>
     <header class="header max_width">
         <div class="nav_head">
+
+            <div onclick="menuOpen()" class="burger-menu">
+                <div class="menu-line"></div>
+                <div class="menu-line"></div>
+                <div class="menu-line"></div>
+            </div>
+
             <a href="index.html">
             <div  class="d-flex">
                     <img src="https://www.greenpost.uz/images/logo.svg" alt="">
@@ -20,6 +27,14 @@
                     </div>
             </div>
             </a>
+            
+            <a href="login.html" class="profile-menu">
+                <svg xmlns="http://www.w3.org/2000/svg" width="31" height="32" fill="#21bf86" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                  </svg>
+            </a>
+
             <div class="telephone phone1">
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -49,7 +64,7 @@
                 </div>
             </div>
             <div class="instruksiya">
-                <a href="" class="lichniy">Личный кабинет</a><br>
+                <a href="login.html" class="lichniy">Личный кабинет</a><br>
                 <a href="menyu pages/pravila.html" class="instruktor">Инструкция</a>
             </div>
             <div class="language">
@@ -74,6 +89,77 @@
             </div>
         </div>
     </header>
+
+    <div class="menu-wrapper" id="menu-wrapper">
+        <div class="menu">
+            <div class="menu-part">
+                <div class="ins-wrap">
+                    <a href="#" class="text1 ins-text">Инструкция</a>
+                    <div onclick="exitMenu()" class="exit-menu">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#449be4" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
+                          </svg>
+                    </div>
+                </div>
+                <div class="sd-menu">
+                    <div class="m-text">Меню</div>
+                    <ul class="m-ul border-bottom11"> 
+                        <li class="border-bottom11"><a href="">Как оформить доставку</a></li>
+                        <li class="border-bottom11"><a href="menyu pages/pravila.html">Правила перевозки товаров</a></li>
+                        <li class="border-bottom11"><a href="soveti.html">Советы по почтовому оформлению</a></li>
+                        <li class="border-bottom11"><a href="">Про шопинг в Китае</a></li>
+                        <li class="border-bottom11"><a href="menyu pages/taobao.html">Подробнее о таобао</a></li>
+                        <li><a href="menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a></li>
+                    </ul>
+                    <div class="other-menus">
+                        <div class="border-bottom11"><a href="bonus.html">Бонусная программа</a></div>
+                        <div class="border-bottom11"><a href="">Тарифы и услуги</a></div>
+                        <div class="border-bottom11"><a href="soveti.html">Советы по почтовому оформлению</a></div>
+                        <div><a href="">Шоппинг-сервис</a></div>
+                    </div>
+                </div>
+                <div class="part2 mb-3">
+                    <div class="lang">
+                        <p class="mb-2">Выберите язык</p>
+                        <div class="lang-flags">
+                            <img src="  https://www.greenpost.uz/images/uz.svg" alt="">
+                            <img src="  https://www.greenpost.uz/images/ru.svg" alt="">
+                            <img src="  https://www.greenpost.uz/images/cn.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="telephone11 phone1">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                            </svg>
+                            <a href="">(+998 94) 603-00-90</a>
+                        </div>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                            </svg>
+                            <a href="">(+998 94) 643-00-90</a>
+                        </div>
+                    </div>
+                    <div class="telephone11 phone2">
+                        <div >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-send-fill" viewBox="0 0 16 16">
+                                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                              </svg>
+                            <a href="">@greenpostuz</a>
+                        </div>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                            </svg>
+                            <a href="">(+998 94) 643-00-90</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="empty-part"></div>
+        </div>
+    </div>
 
     <div class="containerr">
         <div>
